# bashiri

./: .gitignore  README.md  evaluate.py  example.ipynb  install.py  middle.json  pyproject.toml  requirements.txt
evaluation/: confusion.py  cookiecutter_2.json  cookiecutter_3.json  cookiecutter_4.json  evaluate_refactory.py  evaluate_tests4py.py  example.ipynb  fastapi_1.json  middle_1.json  pysnooper_2.json  requirements.txt  run_on_refactory.py  run_on_refactory_functions.py  run_on_tests4py.py  run_on_tests4py_functions.py  run_on_tests4py_refinement.py  setup_refactory.py  sorting.ipynb
evaluation/results/: cookiecutter_2.json  cookiecutter_2_functions.json  cookiecutter_2_refinement.json  cookiecutter_3.json  cookiecutter_3_functions.json  cookiecutter_3_refinement.json  cookiecutter_4.json  cookiecutter_4_functions.json  cookiecutter_4_refinement.json  fastapi_1.json  fastapi_1_functions.json  fastapi_1_refinement.json  fastapi_2.json  fastapi_2_refinement.json  markup_1.json  markup_1_refinement.json  markup_2.json  markup_2_refinement.json  middle_1.json  middle_1_functions.json  middle_1_refinement.json  middle_2.json  middle_2_refinement.json  pysnooper_2.json  pysnooper_2_functions.json  pysnooper_2_refinement.json  pysnooper_3.json  pysnooper_3_functions.json  pysnooper_3_refinement.json  refactory_1.json  refactory_1_functions.json  refactory_2.json  refactory_2_functions.json  refactory_3.json  refactory_3_functions.json  refactory_4.json  refactory_4_functions.json  refactory_5.json  refactory_5_functions.json
results/: pysnooper_2_functions.json
src/bashiri/: __init__.py  events.py  features.py  learning.py  refinement.py
src/bashiri/mapping/: mapping.py  patch.py
src/statio/: events.py  features.py
src/stato/: events.py  features.py  feedback.py  learning.py  reduce.py
tests/: data.csv  eval.csv  eval_cookiecutter_2.csv  eval_cookiecutter_3.csv  eval_middle_1.csv  eval_pysnooper_2.csv  eval_pysnooper_3.csv  test_features.py  test_obe.py  test_testgen.py  train.csv  train_cookiecutter_2.csv  train_cookiecutter_3.csv  train_fastapi_1.csv  train_fastapi_2.csv  train_middle_1.csv  train_pysnooper_2.csv  train_pysnooper_3.csv
