[build-system]
requires = [
    "setuptools>=67.6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "bashiri"
version = "0.0.1"
authors = [
    { name = "Marius Smytzek", email = "marius.smytzek@cispa.de" },
    { name = "Martin Eberlein", email = "ebermart@informatik.hu-berlin.de" },
    { name = "Tural Mammadov", email = "tural.mammadov@cispa.de" },
]
description = "Oracles from Examples"
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "pandas >= 2.2.2",
    "scikit-learn >= 1.5.2",
    "shap >= 0.46.0",
    "joblib >= 1.4.2",
    "tests4py >= 0.0.13",
    "pytest >= 8.3.3",
    "sflkit >= 0.2.22"
]

[sources]
include = ["src"]

[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
    "pytest-rerunfailures>=11.1.2",
]

[tool.black]
line-length = 88
target-version = ['py310']
